# GDPO_Testground

./: .gitignore  README.md  pyproject.toml
config/: experiment.yaml  local_gdpo_smoke.yaml  local_smoke.yaml  sol_smoke.yaml
data/smoke/math/: train.jsonl  val.jsonl
docs/: architecture.md  codex_handoff.md  config.md  dapo-mapping.md  local-smoke.md  modification-guide.md  overview.md  research-surfaces.md  sol.md  troubleshooting.md  upstream-boundary.md
scripts/sol/: create_env.sh  run_certify_debug.sbatch  run_certify_hf.sbatch  run_certify_vllm.sbatch  run_research.sbatch  session_env.sh
src/dapo_lab/: __init__.py  config_schema.py  diagnostics.py  runtime.py  smoke.py  sol_certify.py  train.py  validation.py
src/dapo_lab/algorithms/: __init__.py  advantages.py  filtering.py  losses.py  overlong.py  registry.py  variant_api.py
src/dapo_lab/algorithms/variants/: __init__.py  dapo.py  gdpo.py  grpo.py
src/dapo_lab/data/: __init__.py  math.py  prep.py  schema.py
src/dapo_lab/rewards/: __init__.py  base.py  composition.py  math.py
src/dapo_lab/trainer/: __init__.py  loop.py  rollout.py  state.py
src/dapo_lab/verl_adapter/: __init__.py  batch_adapter.py  boundary.py  compat.py  config_bridge.py  contract.py  runtime_artifacts.py  task_runner.py  trainer.py
tests/: __init__.py  conftest.py  test_adapter.py  test_advantages.py  test_bridge.py  test_filtering.py  test_loop.py  test_losses.py  test_overlong.py  test_rewards.py  test_runtime_artifacts.py  test_smoke.py  test_sol_certify.py  test_task_runner.py  test_validation.py
(+2 files in other folders)
