[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dapo-lab"
version = "0.1.0"
description = "Research-friendly GRPO-to-DAPO harness on top of verl."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"dapo_lab.verl_adapter" = ["contracts/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
